cambia la importación de estilos en el componente SearchVaccine a SCSS, actualiza la estructura del componente de programación para incluir SearchByVaccines y VaccinationScheduleTable, y ajusta el estilo del contenedor de pestañas.

--- a/src/scheduling.scss
+++ b/src/scheduling.scss
@@ -21,6 +21,7 @@
   background: $ui-01;
   display: flex;
   justify-content: center;
+  height: auto;
 }
 
 .title {
@@ -102,7 +103,6 @@
 }
 
 .tab {
-  display: flex;
 }
 
 .tabContainer {
