--- a/src/components/search-by-vaccines/search-by-vaccines.style.scss
+++ b/src/components/search-by-vaccines/search-by-vaccines.style.scss
@@ -42,3 +42,19 @@
   display: flex;
   align-items: end;
 }
+
+.actionsContainer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.actionBtn {
+  display: flex;
+  column-gap: 0.5rem;
+}
+
+.mainSection {
+  display: grid;
+  grid-template-columns: 16rem 1fr;
+}
