Agregar estilo para resaltar el texto en la sección de vistas clínicas

--- a/src/clinical-view-group/clinical-view-section.scss
+++ b/src/clinical-view-group/clinical-view-section.scss
@@ -13,3 +13,9 @@
   background-color: colors.$gray-10;
   margin-top: layout.$layout-01;
 }
+
+.span {
+  font-weight: bold;
+  color: colors.$black;
+  background-color: colors.$blue-10;
+}
