--- a/src/clinical-view-group/clinical-view-section.scss
+++ b/src/clinical-view-group/clinical-view-section.scss
@@ -1,6 +1,7 @@
 @use '@carbon/colors';
 @use '@carbon/layout';
 @use '@carbon/type';
+@use '@openmrs/esm-styleguide/src/vars' as *;
 
 .container {
   height: layout.$layout-03;
@@ -10,12 +11,24 @@
   @include type.type-style('label-02');
   color: colors.$gray-70;
   column-gap: layout.$layout-01;
-  background-color: colors.$gray-10;
+  background-color: colors.$gray-20;
   margin-top: layout.$layout-01;
 }
 
 .span {
-  font-weight: bold;
   color: colors.$black;
-  background-color: colors.$blue-10;
+  font-weight: bolder;
+}
+
+.tooltipButton {
+  background: none;
+  border: none;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.icon {
+  fill: colors.$gray-70; // Asegura que el icono tenga el color correcto
 }
