--- a/src/immunization-plan/immunization-plan-builder.scss
+++ b/src/immunization-plan/immunization-plan-builder.scss
@@ -1,124 +1,121 @@
 @use '@carbon/styles/scss/spacing';
-@use '@carbon/styles/scss/type';
-@import '~@openmrs/esm-styleguide/src/vars';
+@use '@carbon/colors';
+@use '@carbon/layout';
+@use '@carbon/type';
+@use '@openmrs/esm-styleguide/src/vars' as *;
 
-.heading {
-  @include type.type-style('productive-heading-02');
-  color: $text-02;
-  margin-bottom: spacing.$spacing-05;
-}
+.container {
+  background-color: $ui-background;
+  padding: layout.$spacing-05;
+  margin: layout.$spacing-05 0;
+  width: 100%;
 
-.heading:after {
-  content: '';
-  display: block;
-  width: 2rem;
-  padding-top: 0.188rem;
-  border-bottom: 0.375rem solid var(--brand-03);
-}
+  .header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: layout.$spacing-05;
 
-.mainContainer {
-  padding-bottom: 1.5rem;
-  background: $ui-01;
-  display: flex;
-  justify-content: center;
-  height: auto;
-}
+    h2 {
+      @include type.type-style('heading-03');
+      color: $text-02;
+    }
 
-.title {
-  padding: 1rem;
-  font-size: 1.2rem;
-}
-
-.desktopContainer {
-  width: 50%;
-}
-
-.tabletContainer {
-  width: 90%;
-}
-
-.cohortBuilder {
-  :global(.cds--date-picker.cds--date-picker--single .cds--date-picker__input) {
-    width: auto;
-  }
-
-  :global(.cds--tab-content) {
-    width: 80%;
-    padding: 0;
-  }
-
-  :global(.cds--inline-loading__text) {
-    color: white;
-  }
-
-  :global(.cds--tab--list) {
-    flex-direction: column;
-    margin: 1rem;
-  }
-
-  :global(.cds--tabs) {
-    width: auto;
-    max-height: 100%;
-  }
-
-  :global(.cds--tabs .cds--tabs__nav-link) {
-    border-bottom: 0;
-    border-left: 3px solid $ui-03;
-  }
-
-  :global(.cds--tabs .cds--tabs__nav-item--selected) {
-    border-left: 3px solid var(--brand-03);
-    border-bottom: 0;
-    font-weight: 600;
-  }
-
-  :global(.cds--number) {
-    width: 68%;
-  }
-
-  :global(.cds--tabs__nav-link) {
-    &:active,
-    &:focus {
-      outline: 0 !important;
-      outline-offset: 0 !important;
+    &::after {
+      content: '';
+      display: block;
+      width: layout.$spacing-07;
+      padding-top: 0.188rem;
+      border-bottom: 0.375rem solid var(--brand-03);
     }
   }
 
-  :global(.cds--multi-select__wrapper .cds--list-box__wrapper) {
-    width: 90% !important;
+  .controls {
+    display: grid;
+    grid-template-columns: 1fr auto auto;
+    gap: layout.$spacing-05;
+    align-items: flex-end;
+    margin-bottom: layout.$spacing-06;
+    padding: layout.$spacing-05;
+    background-color: $ui-01;
+    border-bottom: 1px solid $ui-03;
+  }
+}
+
+.tableContainer {
+  margin-top: layout.$spacing-05;
+
+  :global(.cds--data-table-container) {
+    background-color: $ui-01;
+    padding: layout.$spacing-05;
   }
 
-  :global(.cds--col) {
-    padding-left: 0;
+  :global(.cds--table-header) {
+    @include type.type-style('heading-compact-01');
+    color: $text-02;
+  }
+}
+
+.periodCell {
+  text-align: center;
+  width: layout.$spacing-09;
+  padding: layout.$spacing-03;
+
+  .periodButton {
     width: 100%;
+    height: layout.$spacing-07;
+    min-height: unset;
+    padding: layout.$spacing-02;
+
+
   }
 }
 
-.tabletTab {
-  width: 25%;
+.ageRange {
+  @include type.type-style('label-01');
+  color: $text-02;
+  margin-top: layout.$spacing-02;
 }
 
-.desktopTab {
-  width: 20%;
+.statusDot {
+  width: layout.$spacing-04;
+  height: layout.$spacing-04;
+  border-radius: 50%;
+  margin: 0 auto;
 }
 
-.tabContainer {
-  background: white;
-  padding-left: 1.5rem;
-  padding-right: 1rem;
-  padding-top: 1rem;
-  margin-bottom: 1rem;
+.requiredDot {
+  @extend .statusDot;
+  background-color: colors.$red-50;
 }
 
-.optionCell {
-  padding: 0 !important;
+.optionalDot {
+  @extend .statusDot;
+  background-color: colors.$blue-50;
 }
 
-.optionHeader {
-  width: 1.5rem !important;
+.conditionalDot {
+  @extend .statusDot;
+  background-color: colors.$purple-50;
 }
 
-.text {
-  font-size: 0.9rem;
-  padding: 0.5rem;
+.legend {
+  display: flex;
+  gap: layout.$spacing-05;
+  margin-top: layout.$spacing-05;
+  padding: layout.$spacing-05;
+  background-color: $ui-01;
+
+  .legendItem {
+    display: flex;
+    align-items: center;
+    gap: layout.$spacing-03;
+
+    @include type.type-style('label-01');
+    color: $text-02;
+  }
+}
+
+.notification {
+  margin-bottom: layout.$spacing-05;
 }
