Agregar nuevos estilos de hover al componente ImmunizationPlanBuilder y actualizar traducciones para mejorar la experiencia del usuario.

--- a/src/immunization-plan/immunization-plan-builder.scss
+++ b/src/immunization-plan/immunization-plan-builder.scss
@@ -67,7 +67,9 @@
     min-height: unset;
     padding: layout.$spacing-02;
 
-
+    &:hover {
+      background-color: colors.$gray-40-hover;
+    }
   }
 }
 
