--- a/src/immunization-plan/immunization-plan-builder.scss
+++ b/src/immunization-plan/immunization-plan-builder.scss
@@ -14,11 +14,15 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-bottom: layout.$spacing-05;
+    height: 5rem; // Tamaño fijo del header
+    padding: layout.$spacing-04;
+    background-color: $ui-01;
+    border-top: 1px solid $ui-03;
 
     h2 {
       @include type.type-style('heading-03');
       color: $text-02;
+      margin: 0;
     }
 
     &::after {
@@ -29,6 +33,7 @@
       border-bottom: 0.375rem solid var(--brand-03);
     }
   }
+
 
   .controls {
     display: flex;
