cambio en el tamaño de los botones circulares

--- a/src/immunization-plan/immunization-plan-builder.scss
+++ b/src/immunization-plan/immunization-plan-builder.scss
@@ -79,10 +79,6 @@
     height: layout.$spacing-07;
     min-height: unset;
     padding: layout.$spacing-02;
-
-    &:hover {
-      background-color: colors.$gray-40-hover;
-    }
   }
 }
 
@@ -93,8 +89,8 @@
 }
 
 .statusDot {
-  width: layout.$spacing-04;
-  height: layout.$spacing-04;
+  width: layout.$spacing-06;
+  height: layout.$spacing-06;
   border-radius: 50%;
   margin: 0 auto;
 }
@@ -112,6 +108,11 @@
 .conditionalDot {
   @extend .statusDot;
   background-color: colors.$purple-50;
+}
+
+.emptyDot {
+  @extend .statusDot;
+  background-color: colors.$gray-30;
 }
 
 .legend {
