--- a/src/well-child-care/components/newborn-monitoring/newborn balance/balance-overview.scss
+++ b/src/well-child-care/components/newborn-monitoring/newborn balance/balance-overview.scss
@@ -13,7 +13,7 @@
   margin: 0 layout.$spacing-05;
 }
 
-.vitalsHeaderActionItems {
+.balanceHeaderActionItems {
   align-items: center;
   display: flex;
   flex: 1 1 0%;
