--- a/src/well-child-care/well-child-care.scss
+++ b/src/well-child-care/well-child-care.scss
@@ -2,6 +2,13 @@
 @use '@carbon/type';
 @import '~@openmrs/esm-styleguide/src/vars';
 
+.row {
+  margin: layout.$spacing-03 0 0;
+  display: flex;
+  flex-flow: row wrap;
+  gap: layout.$spacing-05 layout.$spacing-04;
+}
+
 .container {
   margin: 2rem 0;
 }
