--- a/src/well-child-care/well-child-care.scss
+++ b/src/well-child-care/well-child-care.scss
@@ -164,3 +164,52 @@
   display: flex;
   flex-direction: column;
 }
+
+.tabPanelContainer {
+  background-color: $ui-02;
+}
+
+.tabs > :global(.cds--tab-content) {
+  padding: 0 0 !important;
+}
+
+.tabList {
+  position: sticky;
+  top: 3rem;
+  z-index: 10;
+  background-color: $ui-01;
+  border-bottom: 2px solid $ui-03;
+
+  & :global(.cds--tabs__nav-link) {
+    border-bottom: none !important;
+  }
+}
+
+.tab {
+  height: 2.5rem;
+
+  &:active,
+  &:focus {
+    outline: none !important;
+  }
+
+  &[aria-selected='true'] {
+    border-bottom: 3px solid var(--brand-03) !important;
+  }
+}
+
+.extensionSlot {
+  width: 100%;
+  padding: layout.$spacing-03;
+  background-color: $ui-02;
+  border-radius: layout.$spacing-02;
+  display: flex;
+  flex-wrap: wrap; // Permite múltiples líneas
+  justify-content: flex-start;
+  gap: layout.$spacing-02; // Espaciado entre elementos
+
+  > * {
+    flex: 1 1 calc(50% - layout.$spacing-02); // Ajusta para dos columnas con espacio entre ellas
+    max-width: calc(50% - layout.$spacing-02);
+  }
+}
