--- a/src/family-partner-history/family-history.scss
+++ b/src/family-partner-history/family-history.scss
@@ -9,6 +9,11 @@
   margin-bottom: 1rem;
 }
 
+.widgetCard {
+  border: 1px solid $ui-03;
+  width: 100%;
+  max-width: 100%;
+}
 .tile {
   text-align: center;
 }
