--- a/src/contact-list/contact-list.scss
+++ b/src/contact-list/contact-list.scss
@@ -3,6 +3,12 @@
 @use '@carbon/type';
 @import '~@openmrs/esm-styleguide/src/vars';
 
+.widgetCard {
+  border: 1px solid $ui-03;
+  width: 100%;
+  max-width: 100%;
+}
+
 .widgetContainer {
   background-color: colors.$white-0;
   border: 1px solid colors.$gray-20;
