--- a/src/well-child-care/components/neonatal-register/prenatal-history/prenatal-history.scss
+++ b/src/well-child-care/components/neonatal-register/prenatal-history/prenatal-history.scss
@@ -1,44 +1,50 @@
-.widgetCard {
-  padding: 1rem;
-  border: 1px solid #e0e0e0;
-  border-radius: 4px;
+@use '@carbon/colors';
+@use '@carbon/layout';
+@use '@carbon/type';
+@import '~@openmrs/esm-styleguide/src/vars';
+
+.widgetContainer {
+  background-color: colors.$white-0;
+  border: 1px solid colors.$gray-20;
   margin-bottom: 1rem;
 }
 
-.checklistTile {
-  padding: 0.5rem;
-  margin-bottom: 0.5rem;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  background-color: #fff;
-}
-
-.checklistItem {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.label {
-  font-weight: bold;
-  margin-right: 1rem;
-}
-
-.value {
-  color: #666;
-}
-
-.textInput {
-  width: 200px;
-}
-
 .widgetCard {
-  padding: 1rem;
-  border: 1px solid #e0e0e0;
-  border-radius: 4px;
-  background: #fff;
+  border: 1px solid $ui-03;
+  width: 100%;
+  max-width: 100%;
+}
+.tile {
+  text-align: center;
 }
 
-.tableContainer {
-  margin-top: 1rem;
+.emptyStateContainer {
+  margin: 2rem 0;
+}
+
+.content {
+  @include type.type-style('heading-compact-01');
+  color: colors.$gray-70;
+  margin-top: layout.$layout-05;
+  margin-bottom: layout.$spacing-03;
+}
+
+.desktopHeading,
+.tabletHeading {
+  text-align: left;
+  text-transform: capitalize;
+
+  h4 {
+    @include type.type-style('heading-compact-02');
+    color: colors.$gray-70;
+
+    &:after {
+      content: '';
+      display: block;
+      width: 2rem;
+      padding-top: 3px;
+      border-bottom: 0.375rem solid;
+      @include brand-03(border-bottom-color);
+    }
+  }
 }
