--- a/src/maternal-and-child-health/maternal-health-component.scss
+++ b/src/maternal-and-child-health/maternal-health-component.scss
@@ -1,37 +1,178 @@
-@use '@carbon/styles/scss/spacing';
-@use '@carbon/colors';
 @use '@carbon/layout';
 @use '@carbon/type';
-@use '@openmrs/esm-styleguide/src/vars' as *;
+@use '@carbon/colors';
+@import '~@openmrs/esm-styleguide/src/vars';
 
-.visitType {
-  @include type.type-style('heading-compact-02');
-  color: $text-02;
-  margin-bottom: 5px;
-}
-
-.date {
-  @include type.type-style('body-compact-01');
-  color: $text-02;
-  padding-right: 0.625rem;
-}
-
-.dateLabel {
-  padding-right: 0.313rem;
-}
-
-.displayFlex {
+.row {
+  margin: layout.$spacing-03 0 0;
   display: flex;
-  align-items: center;
-  justify-content: left;
+  flex-flow: row wrap;
+  gap: layout.$spacing-05 layout.$spacing-04;
 }
 
 .container {
-  background-color: $ui-background;
-  border: 1px solid $grey-2;
-  padding: layout.$spacing-05;
-  margin: layout.$spacing-05 0 layout.$spacing-05;
+  margin: 2rem 0;
+}
+
+.emptyStateContainer,
+.loaderContainer {
+  @extend .container;
+}
+
+.tilesContainer {
+  background-color: $ui-02;
+  border: 1px solid $ui-03;
+  border-bottom: none;
   width: 100%;
+  margin: 0 auto;
+  max-width: 95vw;
+  padding-bottom: 0;
+}
+
+.widgetCard {
+  background-color: colors.$white;
+  border: 1px solid colors.$gray-20;
+}
+
+.headerContainer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: layout.$spacing-04 0 layout.$spacing-04 layout.$spacing-05;
+  background-color: $ui-02;
+}
+
+.backgroundDataFetchingIndicator {
+  align-items: center;
+  display: flex;
+  flex: 1 1 0%;
+  justify-content: center;
+}
+
+.tableContainer section {
+  position: relative;
+}
+
+.tableContainer a {
+  text-decoration: none;
+}
+
+.hiddenRow {
+  display: none;
+}
+
+.emptyRow {
+  padding: 0 1rem;
+  display: flex;
+  align-items: center;
+}
+
+.visitSummaryContainer {
+  width: 100%;
+  max-width: 768px;
+  margin: 1rem auto;
+  align-items: left;
+}
+
+.expandedActiveVisitRow > td > div {
+  max-height: max-content !important;
+}
+
+.expandedActiveVisitRow td {
+  padding: 0 2rem;
+}
+
+.expandedActiveVisitRow th[colspan] td[colspan] > div:first-child {
+  padding: 0 1rem;
+}
+
+.action {
+  margin-bottom: layout.$spacing-03;
+}
+
+.illo {
+  margin-top: layout.$spacing-05;
+}
+
+.content {
+  @include type.type-style('heading-compact-01');
+  color: $text-02;
+  margin-top: layout.$spacing-05;
+  margin-bottom: layout.$spacing-03;
+}
+
+.desktopHeading,
+.tabletHeading {
+  text-align: left;
+  text-transform: capitalize;
+
+  h4 {
+    @include type.type-style('heading-compact-02');
+    color: $text-02;
+
+    &:after {
+      content: '';
+      display: block;
+      width: 2rem;
+      padding-top: 3px;
+      border-bottom: 0.375rem solid;
+      @include brand-03(border-bottom-color);
+    }
+  }
+}
+
+.tile {
+  text-align: center;
+  border: 1px solid $ui-03;
+}
+
+.filterEmptyState {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: layout.$spacing-05;
+  margin: layout.$spacing-09;
+  text-align: center;
+}
+
+.filterEmptyStateTile {
+  margin: auto;
+}
+
+.filterEmptyStateContent {
+  @include type.type-style('heading-compact-02');
+  color: $text-02;
+  margin-bottom: 0.5rem;
+}
+
+.filterEmptyStateHelper {
+  @include type.type-style('body-compact-01');
+  color: $text-02;
+}
+
+.cardContainer {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  justify-content: flex-start;
+}
+
+.cardContainer > * {
+  flex: 1;
+  margin: 8px 8px;
+}
+
+.cardContainerBig {
+  display: flex;
+  flex-direction: column;
+}
+
+.cardtext {
+  display: flex;
+  flex-direction: column;
+}
+
+.tabPanelContainer {
+  background-color: $ui-02;
 }
 
 .tabs > :global(.cds--tab-content) {
@@ -63,234 +204,36 @@
   }
 }
 
-.header {
-  .visitInfo {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-}
-
-.header::after {
-  content: '';
-  display: block;
-  width: layout.$spacing-07;
-  padding-top: 0.188rem;
-  border-bottom: 0.375rem solid var(--brand-03);
-}
-
-.toggleButtons {
-  margin: 0 layout.$spacing-05;
-  height: layout.$spacing-08;
-}
-
-.toggle {
-  border: 1px solid colors.$blue-30;
-
-  &:hover {
-    background-color: $color-blue-10;
-  }
-
-  &:active,
-  &:focus {
-    box-shadow: none;
-    background-color: $color-blue-10;
-  }
-
-  &:first-of-type {
-    border-radius: layout.$spacing-02 0 0 layout.$spacing-02;
-  }
-
-  &:last-of-type {
-    border-radius: 0 layout.$spacing-02 layout.$spacing-02 0;
-  }
-}
-
-.emptyStateContainer {
-  text-align: center;
-  margin: layout.$spacing-05 0;
-}
-
-.observation {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-gap: layout.$spacing-03;
-  margin: layout.$spacing-05 layout.$spacing-05 0 0;
-}
-
-.observation > span {
-  align-self: center;
-}
-
-.flexSections {
-  display: flex;
-}
-
-.desktopTabs {
-  button {
-    height: layout.$spacing-07;
-  }
-}
-
-.tabletTabs {
-  button {
-    height: layout.$spacing-09;
-  }
-}
-
-.tabContent {
-  border-top: 1px solid $ui-03;
-  padding: layout.$spacing-05 0;
+.extensionSlot {
   width: 100%;
-}
-
-.medicationRecord {
+  padding: layout.$spacing-03;
+  background-color: $ui-02;
+  border-radius: layout.$spacing-02;
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  flex-wrap: wrap; // Permite múltiples líneas
+  justify-content: flex-start;
+  gap: layout.$spacing-02; // Espaciado entre elementos
 
-  .bodyLong01 {
-    margin: layout.$spacing-02 0;
+  > * {
+    flex: 1 1 calc(50% - layout.$spacing-02); // Ajusta para dos columnas con espacio entre ellas
+    max-width: calc(50% - layout.$spacing-02);
   }
 }
 
-.medicationContainer {
-  background-color: $ui-01;
-  padding: layout.$spacing-05;
-  width: 100% !important;
+.ageStatus {
+  @include type.type-style('body-compact-01');
+  color: colors.$red-70; // Red color for ≤ 90 days
+  font-weight: 600; // Slightly bold to emphasize
 }
 
-.dosage {
-  @include type.type-style('heading-compact-01');
-}
 
-.toggleSwitch {
+.overdueIndicator {
   display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
-  margin-bottom: layout.$spacing-02;
-}
-
-.toggleSwitch div {
-  width: 30%;
-}
-
-.noteText {
-  background-color: $ui-01;
-  padding: layout.$spacing-05;
-  width: 100% !important;
-  white-space: pre-wrap;
-}
-
-.metadata {
-  @include type.type-style('label-01');
-  color: $text-02;
-  margin: layout.$spacing-03 0 layout.$spacing-05;
-}
-
-.observationsEmptyState {
-  margin-top: layout.$spacing-06;
-}
-
-.loader {
-  margin: 0 auto;
-}
-
-.notesContainer {
-  margin-bottom: layout.$spacing-07;
-}
-
-.visitDetailOverviewActions {
-  display: flex;
-  justify-content: flex-end;
   align-items: center;
-}
+  min-inline-size: max-content;
+  color: colors.$red-70;
 
-.loadMoreButton {
-  :global(.cds--inline-loading) {
-    min-height: layout.$spacing-05 !important;
+  svg {
+    margin-right: layout.$spacing-02;
   }
-
-  :global(.cds--inline-loading__text) {
-    font-size: unset !important;
-  }
-}
-
-.label01 {
-  @include type.type-style('label-01');
-}
-
-.text02 {
-  color: colors.$gray-70;
-}
-
-.bodyLong01 {
-  @include type.type-style('body-01');
-}
-
-// Overriding styles for RTL support
-html[dir='rtl'] {
-  .header {
-    .visitInfo {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-    }
-  }
-}
-
-.widgetContainer {
-  background-color: $ui-background;
-}
-
-.widgetHeaderContainer {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: spacing.$spacing-04 0 spacing.$spacing-04 spacing.$spacing-05;
-}
-
-.widgetHeaderContainer > h4:after {
-  content: '';
-  display: block;
-  width: 2rem;
-  padding-top: 0.188rem;
-  border-bottom: 0.375rem solid var(--brand-01);
-}
-
-.toggleButtons {
-  width: fit-content;
-  margin: 0 spacing.$spacing-03;
-}
-
-.tabContainer div[role='tabpanel'] {
-  padding: 0 !important;
-}
-
-.tabContainer li button {
-  width: 100% !important;
-}
-
-.hivStatusTag {
-  min-width: 80px;
-}
-
-.contextSwitcherContainer {
-  width: 20rem;
-  min-width: 60%;
-  margin-right: 1rem;
-}
-
-.desktopContentSwitcher {
-  width: 100%;
-}
-
-.tabletContentSwitcher {
-  width: 100%;
-}
-
-.widgetCard {
-  background-color: $ui-background;
-  border: 1px solid $ui-03;
-  position: relative;
 }
