--- a/src/well-child-care/components/neonatal-register/labour-history/labour-history-summary.scss
+++ b/src/well-child-care/components/neonatal-register/labour-history/labour-history-summary.scss
@@ -1,104 +1,31 @@
+@use '@carbon/colors';
 @use '@carbon/layout';
 @use '@carbon/type';
 @import '~@openmrs/esm-styleguide/src/vars';
 
-.container {
-  margin: 2rem 0;
+.widgetContainer {
+  background-color: colors.$white-0;
+  border: 1px solid colors.$gray-20;
+  margin-bottom: 1rem;
 }
 
-.summaryContainer {
-  padding: 1rem;
-}
-
-.errorContainer {
-  color: red;
-  padding: 1rem;
-}
-
-.emptyState {
-  padding: 1rem;
-  text-align: center;
-  color: #555;
-}
-
-.emptyStateContainer,
-.loaderContainer {
-  @extend .container;
-}
-
-.tilesContainer {
-  background-color: $ui-02;
+.widgetCard {
   border: 1px solid $ui-03;
-  border-bottom: none;
   width: 100%;
-  margin: 0 auto;
-  max-width: 95vw;
-  padding-bottom: 0;
+  max-width: 100%;
+}
+.tile {
+  text-align: center;
 }
 
-.headerContainer {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: layout.$spacing-04 0 layout.$spacing-04 layout.$spacing-05;
-  background-color: $ui-02;
-}
-
-.backgroundDataFetchingIndicator {
-  align-items: center;
-  display: flex;
-  flex: 1 1 0%;
-  justify-content: center;
-}
-
-.tableContainer section {
-  position: relative;
-}
-
-.tableContainer a {
-  text-decoration: none;
-}
-
-.hiddenRow {
-  display: none;
-}
-
-.emptyRow {
-  padding: 0 1rem;
-  display: flex;
-  align-items: center;
-}
-
-.visitSummaryContainer {
-  width: 100%;
-  max-width: 768px;
-  margin: 1rem auto;
-}
-
-.expandedActiveVisitRow > td > div {
-  max-height: max-content !important;
-}
-
-.expandedActiveVisitRow td {
-  padding: 0 2rem;
-}
-
-.expandedActiveVisitRow th[colspan] td[colspan] > div:first-child {
-  padding: 0 1rem;
-}
-
-.action {
-  margin-bottom: layout.$spacing-03;
-}
-
-.illo {
-  margin-top: layout.$spacing-05;
+.emptyStateContainer {
+  margin: 2rem 0;
 }
 
 .content {
   @include type.type-style('heading-compact-01');
-  color: $text-02;
-  margin-top: layout.$spacing-05;
+  color: colors.$gray-70;
+  margin-top: layout.$layout-05;
   margin-bottom: layout.$spacing-03;
 }
 
@@ -109,7 +36,7 @@
 
   h4 {
     @include type.type-style('heading-compact-02');
-    color: $text-02;
+    color: colors.$gray-70;
 
     &:after {
       content: '';
@@ -120,54 +47,4 @@
       @include brand-03(border-bottom-color);
     }
   }
-}
-
-.tile {
-  text-align: center;
-  border: 1px solid $ui-03;
-}
-
-.filterEmptyState {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: layout.$spacing-05;
-  margin: layout.$spacing-09;
-  text-align: center;
-}
-
-.filterEmptyStateTile {
-  margin: auto;
-}
-
-.filterEmptyStateContent {
-  @include type.type-style('heading-compact-02');
-  color: $text-02;
-  margin-bottom: 0.5rem;
-}
-
-.filterEmptyStateHelper {
-  @include type.type-style('body-compact-01');
-  color: $text-02;
-}
-
-.cardContainer {
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  justify-content: flex-start;
-}
-
-.cardContainer > * {
-  flex: 1;
-  margin: 8px 8px;
-}
-
-.cardContainerBig {
-  display: flex;
-  flex-direction: column;
-}
-
-.cardtext {
-  display: flex;
-  flex-direction: column;
 }
