feat: mejorar la tabla de resumen del paciente y actualizar estilos

--- a/src/ui/patient-summary-table/patient-summary-table.scss
+++ b/src/ui/patient-summary-table/patient-summary-table.scss
@@ -13,6 +13,12 @@
   border: 1px solid $ui-03;
   width: 100%;
   max-width: 100%;
+  position: relative;
+
+  .cds--inline-loading {
+    margin-left: auto;
+    margin-right: layout.$spacing-05;
+  }
 }
 .tile {
   text-align: center;
