--- a/src/well-child-care/components/vaccination-schema-widget/vaccination-schedule.scss
+++ b/src/well-child-care/components/vaccination-schema-widget/vaccination-schedule.scss
@@ -3,12 +3,6 @@
 @use '@carbon/type';
 @import '~@openmrs/esm-styleguide/src/vars';
 
-.widgetContainer {
-  background-color: colors.$white-0;
-  border: 1px solid colors.$gray-20;
-  margin-bottom: 1rem;
-}
-
 .widgetCard {
   border: 1px solid $ui-03;
   width: 100%;
@@ -18,33 +12,48 @@
   text-align: center;
 }
 
-.emptyStateContainer {
-  margin: 2rem 0;
+.legendTile {
+  padding: layout.$spacing-05;
+  margin-top: layout.$spacing-03;
+  border: 1px solid colors.$gray-20;
 }
 
-.content {
+.legendTitle {
   @include type.type-style('heading-compact-01');
-  color: colors.$gray-70;
-  margin-top: layout.$layout-05;
   margin-bottom: layout.$spacing-03;
 }
 
-.desktopHeading,
-.tabletHeading {
-  text-align: left;
-  text-transform: capitalize;
+.legendContainer {
+  display: flex;
+  flex-wrap: wrap;
+  gap: layout.$spacing-03;
+}
 
-  h4 {
-    @include type.type-style('heading-compact-02');
-    color: colors.$gray-70;
+.legendItem {
+  display: flex;
+  align-items: center;
+}
 
-    &:after {
-      content: '';
-      display: block;
-      width: 2rem;
-      padding-top: 3px;
-      border-bottom: 0.375rem solid;
-      @include brand-03(border-bottom-color);
-    }
-  }
+.vaccineCell {
+  display: flex;
+  align-items: center;
+  gap: layout.$spacing-02;
+}
+
+.vaccineIndicator {
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background-color: $ui-04;
+  display: inline-block;
+}
+
+.errorContainer {
+  padding: layout.$spacing-05;
+  text-align: center;
+  background-color: colors.$red-10;
+}
+
+.addButton {
+  margin-top: layout.$spacing-03;
 }
