--- a/src/well-child-care/components/cred-controls-timeline/cred-schedule.scss
+++ b/src/well-child-care/components/cred-controls-timeline/cred-schedule.scss
@@ -1,64 +1,102 @@
-// cred-schedule.scss
+@use '@carbon/colors';
+@use '@carbon/layout';
+@use '@carbon/type';
 @import '~@openmrs/esm-styleguide/src/vars';
 
-.card {
-  margin: 1rem;
+.widgetCard {
+  background-color: colors.$white-0;
+  border: 1px solid colors.$gray-20;
+  margin-bottom: 1rem;
+  padding: layout.$spacing-05;
+  width: 100%;
+  max-width: 100%;
+  position: relative;
 }
 
-.header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 1.5rem;
+.desktopHeading {
+  text-align: left;
+  text-transform: capitalize;
+
+  h4 {
+    @include type.type-style('heading-compact-02');
+    color: colors.$gray-70;
+
+    &:after {
+      content: '';
+      display: block;
+      width: 2rem;
+      padding-top: 3px;
+      border-bottom: 0.375rem solid;
+      @include brand-03(border-bottom-color);
+    }
+  }
 }
 
 .ageGroups {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
-  gap: 0.5rem;
-  margin-bottom: 1.5rem;
+  display: flex;
+  flex-wrap: wrap;
+  gap: layout.$spacing-03;
+  margin-top: layout.$spacing-05;
 }
 
 .ageTile {
-  cursor: pointer !important;
+  @include type.type-style('body-compact-01');
   text-align: center;
-  padding: 1rem;
-  border: 1px solid $ui-03;
-
-  &.current {
-    border: 2px solid #0f62fe; // Azul IBM
-    background-color: rgba(15, 98, 254, 0.1);
-  }
+  padding: layout.$spacing-03;
+  border: 1px solid colors.$gray-30;
+  cursor: pointer;
+  flex: 1 1 120px;
 
   &.active {
-    border-color: $interactive-01;
-    background-color: $ui-01;
+    border-color: colors.$blue-60;
+    background-color: colors.$blue-10;
+  }
+
+  &.current {
+    background-color: colors.$gray-10;
   }
 }
 
 .checkups {
-  padding: 1rem;
-  background-color: $ui-01;
+  margin-top: layout.$spacing-05;
+}
+
+.checkupsHeader {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: layout.$spacing-03;
+
+  h5 {
+    @include type.type-style('heading-compact-01');
+    color: colors.$gray-70;
+  }
 }
 
 .checkupItem {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0.75rem 0;
-  border-bottom: 1px solid $ui-03;
+  padding: layout.$spacing-03 0;
+  border-bottom: 1px solid colors.$gray-20;
 
-  &:last-child {
-    border-bottom: none;
+  span {
+    @include type.type-style('body-compact-01');
+  }
+
+  .dueDate {
+    color: colors.$gray-50;
   }
 }
 
 .upcomingHeader {
-  margin-top: 1.5rem;
-  padding-top: 1rem;
-  border-top: 2px solid $ui-03;
+  @include type.type-style('heading-compact-01');
+  color: colors.$gray-70;
+  margin-top: layout.$spacing-05;
+  margin-bottom: layout.$spacing-03;
 }
 
-.dueDate {
-  color: $text-02;
+.error {
+  color: colors.$red-60;
+  @include type.type-style('body-compact-01');
 }
