--- a/src/ui/patient-observation-group-table/observation-group-details.scss
+++ b/src/ui/patient-observation-group-table/observation-group-details.scss
@@ -1,56 +1,112 @@
-@use '@carbon/colors';
 @use '@carbon/layout';
 @use '@carbon/type';
-@import '~@openmrs/esm-styleguide/src/vars';
+@use '@openmrs/esm-styleguide/src/vars' as *;
 
-.widgetContainer {
-  background-color: colors.$white-0;
-  border: 1px solid colors.$gray-20;
-  margin-bottom: 1rem;
+.container {
+  margin: layout.$spacing-05 0;
+  border: 1px solid $ui-03;
 }
 
-.widgetCard {
-  border: 1px solid $ui-03;
-  width: 100%;
-  max-width: 100%;
-  position: relative;
+.tableContainer {
+  padding: 0;
+  border-bottom: none;
 
-  .cds--inline-loading {
-    margin-left: auto;
-    margin-right: layout.$spacing-05;
+  :global(.cds--data-table-header) {
+    padding: 0;
+  }
+
+  :global(.cds--table-toolbar) {
+    position: relative;
+    overflow: visible;
+    top: 0;
+  }
+
+  &:global(.cds--data-table-container) {
+    background: none !important;
   }
 }
-.tile {
-  text-align: center;
+
+.paginationContainer {
+  > div {
+    border: 1px solid $ui-03 !important;
+    border-top: none !important;
+  }
 }
 
-.emptyStateContainer {
-  margin: 2rem 0;
+.filterContainer {
+  :global(.cds--dropdown__wrapper--inline) {
+    gap: 0;
+  }
+
+  :global(.cds--list-box__menu-icon) {
+    height: layout.$spacing-05;
+  }
+
+  label {
+    margin-right: layout.$spacing-05 !important;
+  }
+}
+
+.search {
+  max-width: 16rem;
+}
+
+.menuItem {
+  max-width: none;
+}
+
+.expandedRow {
+  padding-inline-start: 3.5rem;
+
+  > td {
+    padding: inherit !important;
+
+    > div {
+      max-height: max-content !important;
+    }
+  }
+
+  > div {
+    background-color: $ui-02;
+  }
+}
+
+.hiddenRow {
+  display: none;
 }
 
 .content {
-  @include type.type-style('heading-compact-01');
-  color: colors.$gray-70;
-  margin-top: layout.$layout-05;
+  @include type.type-style('heading-compact-02');
+  color: $text-02;
   margin-bottom: layout.$spacing-03;
 }
 
-.desktopHeading,
-.tabletHeading {
-  text-align: left;
-  text-transform: capitalize;
+.tileContainer {
+  background-color: $ui-02;
+  border-top: 1px solid $ui-03;
+  padding: layout.$spacing-11 0;
+}
 
-  h4 {
-    @include type.type-style('heading-compact-02');
-    color: colors.$gray-70;
+.tile {
+  margin: auto;
+  width: fit-content;
+}
 
-    &:after {
-      content: '';
-      display: block;
-      width: 2rem;
-      padding-top: 3px;
-      border-bottom: 0.375rem solid;
-      @include brand-03(border-bottom-color);
-    }
+.tileContent {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.helper {
+  @include type.type-style('body-compact-01');
+  color: $text-02;
+}
+
+.layer {
+  height: 100%;
+
+  :global(.cds--btn--primary) {
+    background-color: unset;
   }
 }
