--- a/src/ui/growth-chart/growth-chart-overview.scss
+++ b/src/ui/growth-chart/growth-chart-overview.scss
@@ -1,5 +1,6 @@
 @use '@carbon/colors';
 @use '@carbon/layout';
+@use '@openmrs/esm-styleguide/src/vars' as *;
 
 .widgetCard {
   background-color: colors.$white;
@@ -9,11 +10,11 @@
 .divider {
   width: 1px;
   height: layout.$spacing-05;
-  color: colors.$gray-20;
+  color: $ui-05;
   margin: 0 layout.$spacing-05;
 }
 
-.chartHeaderActionItems {
+.clinicalDataHeaderActionItems {
   align-items: center;
   display: flex;
   flex: 1 1 0%;
