--- a/src/ui/forms-selector/forms-table.scss
+++ b/src/ui/forms-selector/forms-table.scss
@@ -1,48 +1,134 @@
-.tableContainer {
-  background-color: #ffffff;
-  border: none;
-  margin: 1rem 0;
+@use '@carbon/layout';
+@use '@carbon/type';
+@use '@openmrs/esm-styleguide/src/vars' as *;
+
+.container {
+  padding: layout.$spacing-07;
+  background-color: $ui-01;
+}
+
+.backgroundDataFetchingIndicator {
+  flex: 1;
+}
+
+.flexContainer {
+  display: flex;
+  justify-content: space-between;
 }
 
 .toolbarWrapper {
-  border-bottom: 1px solid #e0e0e0;
-  background-color: #f4f4f4;
+  position: relative;
+  display: flex;
+  height: layout.$spacing-09;
+  justify-content: flex-end;
 }
 
 .tableToolbar {
-  background-color: #f4f4f4;
-  border-bottom: none;
-  padding: 1rem;
+  width: 20%;
+  min-width: 12.5rem;
 }
 
 .search {
-  max-width: 20rem;
-}
-
-.table {
-  background-color: #ffffff;
-}
-
-.formName {
-  color: #0078a6;
-  text-decoration: none;
-  cursor: pointer;
-  font-weight: 600;
-
-  &:hover {
-    color: #0078a6;
-    text-decoration: underline;
+  input {
+    padding: 0 layout.$spacing-10 !important;
   }
 
-  &:focus {
-    outline: 2px solid #0078a6;
-    outline-offset: 2px;
+  :global(.cds--search-close:focus) {
+    outline: none;
+    outline-offset: 0;
+  }
+
+  :global(.cds--search-close:focus:before) {
+    background-color: none;
   }
 }
 
-.editCell {
-  label {
-    color: #525252;
-    font-style: italic;
+.table tr:last-of-type {
+  td {
+    border-bottom: none;
   }
+}
+
+.heading {
+  margin-bottom: layout.$spacing-06;
+}
+
+.toolbar {
+  position: relative;
+  display: flex;
+  width: 100%;
+  min-height: layout.$spacing-09;
+  margin-bottom: layout.$spacing-03;
+}
+
+.emptyContainer {
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding: layout.$spacing-05;
+}
+
+.tableContainer {
+  padding: 0;
+
+  :global(.cds--data-table-content) {
+    border: 1px solid $ui-03;
+    border-bottom: none;
+    overflow: visible;
+  }
+
+  :global(.cds--table-toolbar) {
+    position: relative;
+    height: layout.$spacing-09;
+    min-height: 0;
+    overflow: visible;
+    top: 0;
+  }
+
+  &:global(.cds--data-table-container) {
+    padding-top: 0;
+  }
+}
+
+.filterContainer {
+  flex: 1;
+
+  :global(.cds--dropdown__wrapper--inline) {
+    gap: 0;
+  }
+
+  :global(.cds--list-box__menu-icon) {
+    height: layout.$spacing-05;
+  }
+}
+
+.tileContainer {
+  background-color: $ui-02;
+  border-top: 1px solid $ui-03;
+  padding: layout.$spacing-11 0;
+}
+
+.tile {
+  margin: auto;
+  width: fit-content;
+}
+
+.content {
+  @include type.type-style('heading-compact-02');
+  color: $text-02;
+  margin-bottom: layout.$spacing-03;
+}
+
+.tileContent {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.heading:after {
+  content: '';
+  display: block;
+  width: layout.$spacing-07;
+  padding-top: 0.188rem;
+  border-bottom: 0.375rem solid var(--brand-03);
 }
