--- a/src/ui/forms-selector/forms-selector.scss
+++ b/src/ui/forms-selector/forms-selector.scss
@@ -1,56 +1,104 @@
-@use '@carbon/type';
+@use '@carbon/colors';
 @use '@carbon/layout';
+@use '@carbon/type';
 @use '@openmrs/esm-styleguide/src/vars' as *;
 
-.emptyState {
-  text-align: center;
-  border: 1px solid $ui-03;
+.productiveHeading03 {
+  @include type.type-style('heading-03');
 }
 
-.emptyStateContent {
-  @include type.type-style('heading-compact-01');
-  color: $text-02;
+.sectionTitle {
+  @include type.type-style('heading-compact-02');
+  color: colors.$gray-70;
+  margin: 0 0 layout.$spacing-03 0;
+}
+.title {
+  @extend .productiveHeading03;
+  margin: 0 layout.$spacing-03 layout.$spacing-03 0;
+}
+
+.danger {
+  color: $danger;
+}
+
+.button {
+  height: layout.$spacing-10;
+  display: flex;
+  align-content: flex-start;
+  align-items: baseline;
+  min-width: 50%;
+}
+
+.tablet {
+  margin: layout.$spacing-03 0;
+  padding: layout.$spacing-06 layout.$spacing-05;
+  background-color: $ui-02;
+}
+
+.desktop {
+  padding: 0;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+
+:global(.omrs-breakpoint-lt-desktop) .form {
+  background-color: #ededed;
+}
+
+:global(.omrs-breakpoint-gt-tablet) .form {
+  background-color: $ui-02;
+}
+
+.grid {
+  margin: layout.$spacing-05;
+}
+
+.row {
+  margin: layout.$spacing-03 0 0;
+  display: flex;
+  flex-flow: row wrap;
+  gap: layout.$spacing-05 layout.$spacing-04;
+}
+
+.spacer {
   margin-top: layout.$spacing-05;
-  margin-bottom: layout.$spacing-03;
 }
 
-.desktopHeading {
-  h4 {
-    @include type.type-style('heading-compact-02');
-    color: $text-02;
+.noteInput {
+  width: 100%;
+}
+
+.errorNotification {
+  margin: layout.$spacing-03 0;
+}
+
+.errorContainer {
+  margin: layout.$spacing-05;
+}
+
+.controlInfoRow {
+  display: flex;
+  flex-direction: row;
+  gap: layout.$spacing-05;
+  margin: layout.$spacing-03 0;
+  align-items: flex-start;
+
+  @media (max-width: 672px) {
+    flex-direction: column;
+    gap: layout.$spacing-03;
   }
 }
 
-.tabletHeading {
-  h4 {
-    @include type.type-style('heading-03');
-    color: $text-02;
-  }
-}
-
-.desktopHeading,
-.tabletHeading {
-  text-align: left;
-  text-transform: capitalize;
-  margin-top: layout.$spacing-05;
-  margin-left: layout.$spacing-03;
-  margin-bottom: layout.$spacing-05;
-
-  h4:after {
-    content: '';
-    display: block;
-    width: layout.$spacing-07;
-    padding-top: 0.188rem;
-    border-bottom: 0.375rem solid var(--brand-03);
-  }
-}
-
-// Overriding styles for RTL support
-html[dir='rtl'] {
-  .desktopHeading,
-  .tabletHeading {
-    text-align: right;
-    margin-left: unset;
-    margin-right: layout.$spacing-03;
-  }
+.tooltipButton {
+  background: none;
+  border: none;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
 }
