--- a/src/dyaku-patients/dyaku-patients-table.scss
+++ b/src/dyaku-patients/dyaku-patients-table.scss
@@ -12,6 +12,17 @@
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
 }
 
+.headerContent {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 2rem;
+}
+
+.headerActions {
+  flex-shrink: 0;
+}
+
 .title {
   font-size: 1.75rem;
   font-weight: 600;
